--- a/SportApp/SportApp/sportCell/SportCollectionViewCell.xib
+++ b/SportApp/SportApp/sportCell/SportCollectionViewCell.xib
@@ -10,65 +10,66 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SportCollectionViewCell" id="gTV-IL-0wX" customClass="SportCollectionViewCell" customModule="SportApp" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="158" height="244"/>
+            <rect key="frame" x="0.0" y="0.0" width="207" height="244"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="158" height="244"/>
+                <rect key="frame" x="0.0" y="0.0" width="207" height="244"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cUp-X7-166">
-                        <rect key="frame" x="0.0" y="0.0" width="158" height="50"/>
-                        <constraints>
-                            <constraint firstAttribute="width" secondItem="cUp-X7-166" secondAttribute="height" multiplier="79:25" id="UBl-af-L81"/>
-                        </constraints>
-                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j6N-cU-MAT">
-                        <rect key="frame" x="0.0" y="57" width="158" height="50"/>
+                        <rect key="frame" x="0.0" y="98" width="207" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zHz-Ks-p4Z">
-                        <rect key="frame" x="0.0" y="120" width="158" height="50"/>
+                        <rect key="frame" x="0.0" y="136" width="207" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ah2-ei-6V3">
-                        <rect key="frame" x="0.0" y="193" width="158" height="50"/>
+                        <rect key="frame" x="0.0" y="174" width="207" height="30"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cUp-X7-166">
+                        <rect key="frame" x="0.0" y="0.0" width="207" height="90"/>
+                    </imageView>
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="120" id="2Xy-bX-f3B"/>
-                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="width" secondItem="ZTg-uK-7eu" secondAttribute="width" id="7Ph-2I-hdX"/>
-                <constraint firstItem="ah2-ei-6V3" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.25" id="7YP-if-F0b"/>
-                <constraint firstItem="ah2-ei-6V3" firstAttribute="width" secondItem="ZTg-uK-7eu" secondAttribute="width" id="Ht4-vk-ZGV"/>
-                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="top" secondItem="j6N-cU-MAT" secondAttribute="bottom" constant="13" id="Nqy-oG-NPv"/>
-                <constraint firstItem="ah2-ei-6V3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="P5Y-7n-JsP"/>
-                <constraint firstItem="ah2-ei-6V3" firstAttribute="top" secondItem="zHz-Ks-p4Z" secondAttribute="bottom" constant="23" id="RFS-2S-oUi"/>
-                <constraint firstItem="cUp-X7-166" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="STj-3k-GqQ"/>
-                <constraint firstItem="ZTg-uK-7eu" firstAttribute="top" secondItem="cUp-X7-166" secondAttribute="top" constant="44" id="SXQ-R2-w5N"/>
-                <constraint firstItem="cUp-X7-166" firstAttribute="width" secondItem="ZTg-uK-7eu" secondAttribute="width" id="WWo-Sl-poA"/>
-                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="Zpz-ZU-kE8"/>
-                <constraint firstItem="j6N-cU-MAT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="keN-c2-OXT"/>
-                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.25" id="vua-gt-yl4"/>
-                <constraint firstItem="cUp-X7-166" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.25" id="wZW-1V-Y3i"/>
-                <constraint firstItem="j6N-cU-MAT" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.25" id="ybC-bN-PwS"/>
-                <constraint firstItem="j6N-cU-MAT" firstAttribute="width" secondItem="ZTg-uK-7eu" secondAttribute="width" id="zVF-cr-CkN"/>
+                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="top" secondItem="j6N-cU-MAT" secondAttribute="bottom" constant="8" symbolic="YES" id="0BR-de-rFi"/>
+                <constraint firstItem="cUp-X7-166" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="1G3-C6-noc"/>
+                <constraint firstItem="cUp-X7-166" firstAttribute="width" secondItem="ZTg-uK-7eu" secondAttribute="width" id="5pQ-OU-Pjr"/>
+                <constraint firstAttribute="trailing" secondItem="ah2-ei-6V3" secondAttribute="trailing" id="8Za-FR-Fk5"/>
+                <constraint firstAttribute="trailing" secondItem="j6N-cU-MAT" secondAttribute="trailing" id="BrM-eH-NOR"/>
+                <constraint firstItem="j6N-cU-MAT" firstAttribute="top" secondItem="cUp-X7-166" secondAttribute="bottom" constant="8" symbolic="YES" id="D22-5m-vU7"/>
+                <constraint firstItem="cUp-X7-166" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="D3B-hp-8FB"/>
+                <constraint firstItem="cUp-X7-166" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.45" id="LFO-SB-CDX"/>
+                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="width" secondItem="ZTg-uK-7eu" secondAttribute="width" id="MHm-yb-7HZ"/>
+                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.15" id="OtB-no-Oy6"/>
+                <constraint firstAttribute="trailing" secondItem="cUp-X7-166" secondAttribute="trailing" id="PxC-fz-vtJ"/>
+                <constraint firstItem="ah2-ei-6V3" firstAttribute="top" secondItem="zHz-Ks-p4Z" secondAttribute="bottom" constant="8" symbolic="YES" id="Qem-X4-Myp"/>
+                <constraint firstItem="j6N-cU-MAT" firstAttribute="width" secondItem="ZTg-uK-7eu" secondAttribute="width" id="SXz-Zm-Hva"/>
+                <constraint firstItem="zHz-Ks-p4Z" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="W3U-pq-sgG"/>
+                <constraint firstAttribute="trailing" secondItem="zHz-Ks-p4Z" secondAttribute="trailing" id="ZWn-1f-9T3"/>
+                <constraint firstItem="ah2-ei-6V3" firstAttribute="width" secondItem="ZTg-uK-7eu" secondAttribute="width" id="az9-i0-LlT"/>
+                <constraint firstItem="ah2-ei-6V3" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.15" id="hRK-T6-BA0"/>
+                <constraint firstItem="ah2-ei-6V3" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="jwm-W7-k0z"/>
+                <constraint firstItem="j6N-cU-MAT" firstAttribute="height" secondItem="ZTg-uK-7eu" secondAttribute="height" multiplier="0.15" id="yZQ-Oi-cYn"/>
+                <constraint firstItem="j6N-cU-MAT" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="zNp-9c-48m"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="158" height="244"/>
+            <size key="customSize" width="207" height="244"/>
             <connections>
                 <outlet property="eventDate" destination="zHz-Ks-p4Z" id="acg-JJ-Rb6"/>
                 <outlet property="eventImg" destination="cUp-X7-166" id="DZ3-qT-KK5"/>
                 <outlet property="eventName" destination="j6N-cU-MAT" id="DUu-t8-1eq"/>
                 <outlet property="eventTime" destination="ah2-ei-6V3" id="txz-vx-gcp"/>
             </connections>
-            <point key="canvasLocation" x="87" y="64"/>
+            <point key="canvasLocation" x="122.46376811594205" y="63.616071428571423"/>
         </collectionViewCell>
     </objects>
 </document>
